fix(announcement): 공고 조회 리뷰 피드백 반영 (#20)